[gd_scene load_steps=3 format=3 uid="uid://drby8qevp80qx"]

[ext_resource type="Script" path="res://Stages/MainMenu/main_menu.gd" id="1_mha7e"]
[ext_resource type="FontFile" uid="uid://c514dyw4umvhl" path="res://Common/EagleLake-Regular.ttf" id="2_b5xne"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mha7e")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -76.0
offset_right = 55.0
offset_bottom = 76.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 25

[node name="New Game" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 75)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_b5xne")
theme_override_font_sizes/font_size = 24
text = "New Game"

[node name="Load Game" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 75)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_b5xne")
theme_override_font_sizes/font_size = 24
text = "Load Game"

[node name="Settings" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 75)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_b5xne")
theme_override_font_sizes/font_size = 24
text = "Settings"

[node name="Exit" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 75)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_b5xne")
theme_override_font_sizes/font_size = 24
text = "Exit
"

[connection signal="pressed" from="VBoxContainer/New Game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="VBoxContainer/Load Game" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
